# Cpts483-Intro-To-Robotics

./: .gitignore  .gitmodules  LICENSE  README.md  _config.yml  _config.yml~  about.md  blog-list.html  blog-list.html~  catkin_ws-setup.bash  index.html  index.md  lessons-list.md  params.json
Resources/: Navigation  Turtlebotsim-Navigation
Resources/Example Codes/: turtle_mimic.launch
Resources/Lessons/: .gitignore  ROSLesson3.pptx
Resources/Presentation/: .~lock.Day 1 ROS_Intro.odp#  Computation Graph.odp  Day 1 ROS_Intro.odp  Day 2 ROS_Tutorial_IntroGraph_concept.odp  Day 3 Computation Graph.odp  Day 4 Roslaunch.odp  (+4 more)
Text books/: A Gentile Introduction to ROS  readme.md
_includes/: .sidebar.html.kate-swp  head.html  sidebar.html  sidebar.html~
_posts/: 2014-08-01-ROS-Computation-Graph.md  2014-08-01-ROS-Environment-Setup.md  2014-08-01-ROS-Filesystem.md  2014-08-01-ROS-GUI.md  2014-08-01-ROS-Introduction.md~  2014-08-01-ROS-Packages.md  2014-08-01-ROS-Simulation.md  2014-08-01-ROS-Simulation.md~  2014-08-01-ROS-Structure.md  2014-08-01-ROS-catkin-packages.md  2014-08-01-Roslaunch.md  2014-08-01-simulators.md~
_site/: 404.html  Gemfile  atom.xml  index.html
blog/: index.html~
src/danasim/dana_ardrone/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  package.xml
src/danasim/dana_ardrone/src/: danasim_controller.py  drone_teleop.py  drone_teleop.py~  drone_video_display.py  fly_square.py  fly_square.py~  takeoff_N_Land_V2.py  takeoff_and_land.py
src/danasim/dana_ardrone/www/: Read Me
src/danasim/danasim/: CMakeLists.txt  package.xml
(+23 files in other folders)
