<?xml version="1.0"?>
<package>
  <name>dana_ardrone</name>
  <version>0.0.0</version>
  <description>The dana_ardrone package</description>
  <maintainer email="faustino@todo.todo">faustino</maintainer>
  <license>TODO</license>


  <!-- <url type="website">http://wiki.ros.org/dana_ardrone</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <run_depend>ardrone_autonomy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>